--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/qfoooo/corgit#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "chalk": "^4.1.0",
     "luxon": "^1.25.0"
   }
